--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: uint256_t blog
 subtitle: いろいろ書くつもり
 email: maekawatoshiki1017@gmail.com
-description: 
+description: いろいろ書くつもり
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
